# cursor-free-vip

./: .dockerignore  .env  .gitignore  11  CHANGELOG.md  Dockerfile  PKGBUILD  README.md  api_discovery_results_20250802_001218.json  api_test_results.json  auto_find_endpoints.py  block_domain.txt  build.spec  bypass_token_limit.py  bypass_version.py  check_user_authorized.py  config.py  cursor_acc_info.py  cursor_accounts.txt  cursor_register_manual.py  enhanced_config.py  enhanced_error_handler.py  enhanced_utils.py  flake.nix  get_user_token.py  github_trial_reset.py  logo.py  main.py  new_signup.py  new_tempemail.py  oauth_auth.py  package.json  pr_description.md  project_info.py  pyproject.toml  quit_cursor.py  requirements.txt  reset_machine_manual.py  test_api.py  test_api_connection.py  (+3 more)
.github/workflows/: build.yml  docker-publish.yml  pages.yml
email_tabs/: mail_tm_tab.py  one_sec_mail_tab.py  priority_email_tab.py  temp_mail_org_tab.py
locales/: ar.json  bg.json  de.json  en.json  es.json  fr.json  it.json  ja.json  nl.json  pt.json  ru.json  tr.json  vi.json  zh_cn.json  zh_tw.json
scripts/: install.ps1  install.sh  reset.ps1
web/: 404.html  _headers  index.html  manifest.webmanifest  robots.txt  script.js  sitemap.xml  styles.css
web/functions/api/: health.js
